--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- con control k+c su mac posso shortcuttare i comments! -->
     <h1>Testo</h1>
     <h2>Testo</h2>
     <h3>Testo</h3>
     <h4>Testo</h4>
-    <h5>Testo</h5>
     <h6>Testo</h6>
+    <h5>Testo</h5>
 
-
+    <!-- that's a paragraph -->
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos aliquam tenetur, qui totam expedita beatae mollitia optio esse rerum possimus non quasi praesentium magnam eum quod asperiores excepturi nisi. Incidunt. </p>
+    
 </body>
 </html>
