--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 
     <!-- that's a paragraph -->
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos aliquam tenetur, qui totam expedita beatae mollitia optio esse rerum possimus non quasi praesentium magnam eum quod asperiores excepturi nisi. Incidunt. </p>
-    
+
+    <!-- that's a order list -->
+    <h2>Order list</h2>
+
+    <ol>
+        <li>
+            <h4>Element 1</h4>
+        </li>
+        <li>Element 2</li>
+        <li>Element 3</li>
+    </ol>
+
 </body>
 </html>
