added intern list

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
         <li>
             <h4>Element 1</h4>
         </li>
-        <li>Element 2</li>
+        <li>
+            <h4>lista interna</h4>
+            <ul>
+                <li>uno</li>
+                <li>due</li>
+                <li>tre</li>
+            </ul>
+        </li>
         <li>Element 3</li>
     </ol>
 
