--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <h4>Testo</h4>
     <h6>Testo</h6>
     <h5>Testo</h5>
-
+    <!-- /end titles -->
+    
     <!-- that's a paragraph -->
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos aliquam tenetur, qui totam expedita beatae mollitia optio esse rerum possimus non quasi praesentium magnam eum quod asperiores excepturi nisi. Incidunt. </p>
 
@@ -36,5 +37,12 @@
         <li>Element 3</li>
     </ol>
 
+    <button>this is a button</button>
+
+    <hr>
+
+    <em>tag em</em>
+    <br> <!--questo serve per andare a capo -->
+    <strong>tag strong</strong>
 </body>
 </html>
